--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Install dotnet-format
+      run: dotnet tool install -g dotnet-format
+    - name: Run dotnet format
+      run: dotnet format --check
     - name: Build
       run: dotnet build --no-restore
     - name: Test
