--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dotnet-format
       run: dotnet tool install -g dotnet-format
     - name: Run dotnet format
-      run: dotnet format --check
+      run: dotnet format 
     - name: Build
       run: dotnet build --no-restore
     - name: Test
