--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Check format code
       run: |
         dotnet tool install -g dotnet-format
-        dotnet format || echo "Formatting issues found, please run dotnet format locally"
+        dotnet format CItestApplication.sln || echo "Formatting issues found, please run dotnet format locally"
     - name: Build
       run: dotnet build --no-restore
     - name: Test
